--- a/app.css
+++ b/app.css
@@ -1,6 +1,7 @@
 html,body{
     height: 100%;
     width: 100%;
+    background: #c7c0c0;
 }
 #noticia{
    -webkit-column-count: 2; /* Chrome, Safari, Opera */
@@ -11,6 +12,8 @@ html,body{
 #cabecera{
     text-align: center;
     font-family: 'Press Start 2P', cursive;
+    background: #000;
+    color: white
 }
 h2{
     font-family: 'Press Start 2P', cursive;
