--- a/app.css
+++ b/app.css
@@ -15,10 +15,15 @@ html,body{
     background: #000;
     color: white
 }
+h1{
+    padding-top: 1%;
+}
 h2{
     font-family: 'Press Start 2P', cursive;
 }
-
+#subtitle{
+    padding-bottom: 1%;
+}
 .localidad{
     float:left;
     padding-right: 1%;
@@ -33,6 +38,6 @@ video{
 }
 #videoAbajo{
     width: 80%;
-    height: 10%;
+    height: 400px;
 }
 
