--- a/app.css
+++ b/app.css
@@ -41,4 +41,15 @@ h2{
     height: 40px;
     width: 40px;
 }
-
+#regards{
+    text-align: center;
+}
+#invaders{
+    height: 100px;
+}
+#menu{
+    text-align: center;
+    padding: 1%;
+    color: seashell;
+    background: 777373;
+}
