--- a/app.css
+++ b/app.css
@@ -57,5 +57,8 @@ h2{
 #menu li{
     display: inline;
     text-align: center;
-    margin: 0 10px 0 0;
+    margin: 0 1% 0 0;
+} 
+#menu li a{
+  color:aliceblue;
 } 
