--- a/app.css
+++ b/app.css
@@ -51,7 +51,7 @@ h2{
     text-align: center;
     padding: 1%;
     color: seashell;
-    background: 777373;
+    background: #777373;
     list-style-type: none;
 }
 #menu li{
